--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -213,7 +213,8 @@ ul li span {
     margin:35px 0 70px 20px;
     padding: 17px; 
 }
-.btn-download::hover{
+.btn-download:hover{
+    background-color: rgba(255, 255, 255, 0.7);
     color: rgba(255, 162, 0, 1);
 }
 
