--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -103,7 +103,7 @@
     /*width: 40%*/
 }
 /* Small devices (tablets, 768px and up) */
-@media screen and (min-width: 300px) and (max-width: 992px) {
+@media screen and (min-width: 200px) and (max-width: 992px) {
     .box-left{
         display: none;     
     }
@@ -195,7 +195,6 @@
 }
 ul li {
     /* Bullet color */
-    color: white;
     list-style-type: disc;
 }
 
@@ -203,7 +202,7 @@ ul li span {
     /* Text color */
     color: black;
 }
-.btn-download {
+.btn-download, .btn-download-black, .btn-send {
     background-color: rgba(255, 255, 255, 0.6);
     border: 0;
     color: rgba(255, 162, 0, 1);
@@ -216,10 +215,62 @@ ul li span {
     background-color: rgba(255, 255, 255, 0.7);
     color: rgba(255, 162, 0, 1);
 }
+.btn-download-black {
+    background-color: #151515;
+    color:white;
+}
+.btn-download-black:hover{
+    background-color: black;
+    color:white;   
+}
+.btn-send{
+    background-color: #FFA200;
+    color:white;
+    font-family: 'MuseoSans-700' !important;
+    margin:15px;
+    padding: 12px 60px;
+    font-size: 20px;
+}
+.btn-send:hover{
+    /*background-color: rgba(255, 150, 0, 0.7);*/
+    background-color: #FF9600;
+    color:white;
+}
+
 /* four */
 .four .two-description{
     margin:10px 0 78px 0;
 }
+/* five */
+
+#download-form {
+    font-family: 'MuseoSans-100' !important;
+    font-weight: 700;
+}
+#download-form ul {
+    margin: 0;
+    padding: 0;
+}
+#download-form ul li {
+    list-style-type: none;
+    /*padding: 0px 0px 13px 0;*/
+}
+#download-form label {
+    margin:0 0 0 0;
+    padding:0 0 0 0;
+}
+#download-form label span{
+    color: white;
+    font-size: 16px;
+}
+
+#download h2 {
+    font-family: 'MuseoSans-700' !important;
+    color:white;
+    margin: 0  0 15px 0;
+}
+
+
 
 /* general */
 h1,h2,h3,h4,h5,h6 {
@@ -233,17 +284,37 @@ h1{
 .img-center {
     margin: 0px auto;
 }
-
+.error {
+    color: #D60204 !important;
+}
+/* form
+----------------------------*/
+.form-control {    
+    background-color: rgba(255, 255, 255, 0.6);
+    border: none;
+    margin: 0 0 15px 0;
+}
 div.centered 
 {
     text-align: center;
     padding-bottom: 15px;
 }
-
 div.centered table 
 {
     /*margin: 0 auto;*/
     text-align: left;
+}
+.table-head {
+    background-color: rgb(255, 162, 0);
+    color: white;
+    font-family: 'MuseoSans-700' !important;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
+}
+.table1 {
+    background-color: #FFA200;
+
 }
 /* Small devices (tablets, 768px and up) */
 @media screen and (min-width: 300px) and (max-width: 992px) {
