--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -85,7 +85,7 @@
     padding: 0 67px;  
 }
 .one-animation {
-  height: 430px;
+  margin: 60px 0 0 0;
 }
 
 .box-left, .box-right{
@@ -286,6 +286,109 @@ ul li span {
     color:black;
 }
 
+/* Animation +hasta+ 796px */
+.background-animation {
+    background: transparent url('../img/animacion/fondo.png') no-repeat top center;
+    height: 342px;
+}
+.clear {
+    clear: both;
+}
+#eye {
+    /*background: transparent url('../img/animacion/ojo.png') no-repeat top left;
+    width: 128px;
+    height: 128px;*/
+}
+.eye-box-left {
+    width: 50.97%;
+    float: left;
+}
+.eye-box-center {
+    width: 19.97%;
+    float: left;
+    padding: 0 0 0 25px;
+    position: relative;
+    top: -90px;    
+}
+.eye-box-right {
+    width: 29.06%;
+    float: left;
+}
+/* Small devices (tablets, 768px and up) */
+@media screen and (max-width: 796px) {
+    .eye-box-center {
+        width: 49.03%;
+    }
+
+}
+/*** avion ***/
+.object-plane {
+    position: relative;
+    top:-120px;
+}
+.plane-line{    
+    border-top:1.5px solid white;    
+    width: 250px;
+    margin:20px 15px 0 0;
+    float: left;
+}
+.plane{
+    float: left;
+}
+/*** paracidista ***/
+.paratrooper-box-left {
+    width: 10%;
+    float: left
+}
+.paratrooper {
+    width: 90%;
+    float: left  
+}
+.object-paratrooper {
+    position: relative;
+    top:-100px;
+}
+/*** nube 1 ***/
+.object-clound-1 {
+    position: relative;
+    top:-190px;
+}
+.clound-1-box-left {
+    float: left;
+    width: 35.93%
+}
+.clound-1 {
+    float: left;
+    width: 64.07%;
+}
+/*** nube 2 ****/
+.object-clound-2 {
+    padding: 0 0 0 5%;
+    position: relative;
+    top: -145px;
+}
+.object-clound-3 {
+    padding: 0 0 0 63%;
+    position: relative;
+    top: -200px;
+}
+.object-clound-4 {
+    padding: 0 0 0 70%;
+    position: relative;
+    top: -190px;
+}
+.object-clound-5 {
+    padding: 0 0 0 56%;
+    position: relative;
+    top: -240px;
+}
+.object-clound-6 {
+    padding: 0 0 0 82%;
+    position: relative;
+    top: -280px;
+}
+
+
 /* general */
 h1,h2,h3,h4,h5,h6 {
     color:black;
@@ -474,11 +577,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
  ********************************/
  @media screen and (max-width: 500px) {
     .one-title-third h1 {
-        font-size: 34px;
-        color:red;
+        font-size: 35px;
     }
     .one-subtitle-third {
         font-size:18px;
         padding: 0 0 0 0;        
+    }
+    .one-title-first h1, h2 {
+        font-size:25px;
+    }
+    .two-description{
+        font-size:18px;   
     }
 }
