--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -53,6 +53,9 @@
 /****************************************
  * Style
 ****************************************/
+.logo {
+    margin: 60px 0 0 0;
+}
 .one-title-first {
     padding: 0 62px;
     margin:5px 0 0 0;    
@@ -183,7 +186,10 @@
     position: relative;
     z-index: 1;
 }
-
+.text-litle {
+    font-size: 13px;
+    margin: 10px 0 0 0;
+}
 
 .three-description {
     font-family: 'MuseoSans-100' !important;
