--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -54,10 +54,10 @@
  * Style
 ****************************************/
 .logo {
-    margin: 60px 0 0 0;
+    margin: 60px 0 0 0 !important;
 }
 .one-title-first {
-    padding: 0 62px;
+    padding: 0 75px;
     margin:5px 0 0 0;    
 }
 .one-title-first h1,h2 {
