--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -596,6 +596,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
         font-size:25px;
     }
     .two-description{
-        font-size:18px;   
+        font-size: 18px;
+        padding: 0 10px;
     }
 }
